// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreview /> should render a proposal preview 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="proposal-preview"
    id="proposal-1"
  >
    <ForwardRef(Relay(Connect(ProposalPreviewBody)))
      proposal={
        Object {
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "id": "1",
        }
      }
      step={
        Object {
          "$refType": null,
        }
      }
      viewer={null}
    />
    <ForwardRef(Relay(ProposalPreviewFooter))
      proposal={
        Object {
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "id": "1",
        }
      }
      step={
        Object {
          "$refType": null,
        }
      }
    />
    <ForwardRef(Relay(ProposalPreviewStatus))
      proposal={
        Object {
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "id": "1",
        }
      }
    />
  </Card>
</Col>
`;

exports[`<ProposalPreview /> should render a proposal preview vip 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="bg-vip proposal-preview"
    id="proposal-1"
  >
    <ForwardRef(Relay(Connect(ProposalPreviewBody)))
      proposal={
        Object {
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "id": "1",
        }
      }
      step={
        Object {
          "$refType": null,
        }
      }
      viewer={null}
    />
    <ForwardRef(Relay(ProposalPreviewFooter))
      proposal={
        Object {
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "id": "1",
        }
      }
      step={
        Object {
          "$refType": null,
        }
      }
    />
    <ForwardRef(Relay(ProposalPreviewStatus))
      proposal={
        Object {
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "id": "1",
        }
      }
    />
  </Card>
</Col>
`;
